--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -25,6 +25,7 @@ import Profileimg from "../assets/profile.png";
 
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"
     ></script>
+    ptite folie de description
     <script
       src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/ScrollTrigger.min.js"
     ></script> -->
