--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ import Basiclayout from "../layouts/BasicLayout.astro";
   <ul>
     <li>Edit this page in <code>src/pages/index.astro</code></li>
     <li>
-      Edit the site header items in <code>src/components/Header.astro</code>
+      Edit the site header items in the <code>src/components/Header.astro</code>
     </li>
     <li>
       Add your name to the footer in <code>src/components/Footer.astro</code>
@@ -27,7 +27,8 @@ import Basiclayout from "../layouts/BasicLayout.astro";
     <li>Check out the included blog posts in <code>src/content/blog/</code></li>
     <li>
       Customize the blog post page layout in <code
-        >src/layouts/BlogPost.astro</code>
+        >src/layouts/BlogPost.astro</code
+      >
     </li>
   </ul>
   <p>
